--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,68 +2,75 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Bacground Patterns */
-.DiagonalV1 {
-  background-color: #e5e5f7;
-  opacity: 0.8;
-  background: repeating-linear-gradient(
-    45deg,
-    #131341,
-    #131341 5px,
-    #e5e5f7 5px,
-    #e5e5f7 25px
-  );
+/* Theme Toggle Switch */
+.container {
+  cursor: pointer;
 }
 
-.DiagonalV2 {
-  background-color: #100d23;
-  opacity: 1;
-  background: repeating-linear-gradient(
-    45deg,
-    #4ca4e3,
-    #4ca4e3 5px,
-    #100d23 5px,
-    #100d23 25px
-  );
+.container input {
+  display: none;
 }
 
-.Polka {
-  background-color: #100d23;
-  opacity: 1;
-  background-image: radial-gradient(#4ca4e3 0.5px, #100d23 0.5px);
-  background-size: 10px 10px;
+.container input + div {
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  position: relative;
+  box-shadow: inset 14px -14px 0 0 var(--color-toggle-dark, #000);
+  transform: scale(1) rotate(-2deg);
+  transition: box-shadow 0.5s ease 0s, transform 0.4s ease 0.1s;
 }
 
-.PolkaV2 {
-  background-color: #100d23;
-  opacity: 1;
-  background-image: radial-gradient(#2222ff 0.5px, #100d23 0.5px);
-  background-size: 10px 10px;
+.container input + div::before {
+  content: "";
+  width: inherit;
+  height: inherit;
+  border-radius: inherit;
+  position: absolute;
+  left: 0;
+  top: 0;
+  transition: background 0.3s ease;
 }
 
-.Cross {
-  background-color: #100d23;
-  opacity: 1;
-  background: radial-gradient(
-      circle,
-      transparent 20%,
-      #100d23 20%,
-      #100d23 80%,
-      transparent 80%,
-      transparent
-    ),
-    radial-gradient(
-        circle,
-        transparent 20%,
-        #100d23 20%,
-        #100d23 80%,
-        transparent 80%,
-        transparent
-      )
-      25px 25px,
-    linear-gradient(#4ca4e3 2px, transparent 2px) 0 -1px,
-    linear-gradient(90deg, #4ca4e3 2px, #100d23 2px) -1px 0;
-  background-size: 50px 50px, 50px 50px, 25px 25px, 25px 25px;
+.container input + div::after {
+  content: "";
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  margin: -4px 0 0 -4px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  box-shadow: 0 -23px 0 var(--color-toggle-light, #eee),
+    0 23px 0 var(--color-toggle-light, #eee),
+    23px 0 0 var(--color-toggle-light, #eee),
+    -23px 0 0 var(--color-toggle-light, #eee),
+    15px 15px 0 var(--color-toggle-light, #eee),
+    -15px 15px 0 var(--color-toggle-light, #eee),
+    15px -15px 0 var(--color-toggle-light, #eee),
+    -15px -15px 0 var(--color-toggle-light, #eee);
+  transform: scale(0);
+  transition: all 0.3s ease;
+}
+
+.container input:checked + div {
+  box-shadow: inset 32px -32px 0 0 #fff;
+  transform: scale(0.5) rotate(0deg);
+  transition: transform 0.3s ease 0.1s, box-shadow 0.2s ease 0s;
+}
+
+.container input:checked + div::before {
+  background: var(--color-toggle-light, #eee);
+  transition: background 0.3s ease 0.1s;
+}
+
+.container input:checked + div::after {
+  transform: scale(1.5);
+  transition: transform 0.5s ease 0.15s;
+}
+:root {
+  --color-toggle-light: yellow;
+  --color-toggle-dark: bisque;
 }
 
 /* Shine */
@@ -80,4 +87,22 @@
 .shineEffect:hover {
   -webkit-mask-position: 100%;
   transition: mask-position 1s ease, -webkit-mask-position 1s ease;
+}
+/* Fade in tabs */
+@-webkit-keyframes fadeEffect {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeEffect {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
