Refactored Index+ Added /code page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@
   display: none;
 }
 
-.container input + div {
+.container input+div {
   border-radius: 50%;
   width: 36px;
   height: 36px;
@@ -21,7 +21,7 @@
   transition: box-shadow 0.5s ease 0s, transform 0.4s ease 0.1s;
 }
 
-.container input + div::before {
+.container input+div::before {
   content: "";
   width: inherit;
   height: inherit;
@@ -32,7 +32,7 @@
   transition: background 0.3s ease;
 }
 
-.container input + div::after {
+.container input+div::after {
   content: "";
   width: 8px;
   height: 8px;
@@ -53,21 +53,22 @@
   transition: all 0.3s ease;
 }
 
-.container input:checked + div {
+.container input:checked+div {
   box-shadow: inset 32px -32px 0 0 #fff;
   transform: scale(0.5) rotate(0deg);
   transition: transform 0.3s ease 0.1s, box-shadow 0.2s ease 0s;
 }
 
-.container input:checked + div::before {
+.container input:checked+div::before {
   background: var(--color-toggle-light, #eee);
   transition: background 0.3s ease 0.1s;
 }
 
-.container input:checked + div::after {
+.container input:checked+div::after {
   transform: scale(1.5);
   transition: transform 0.5s ease 0.15s;
 }
+
 :root {
   --color-toggle-light: yellow;
   --color-toggle-dark: bisque;
@@ -75,24 +76,25 @@
 
 /* Shine */
 .shineEffect {
-  -webkit-mask-image: linear-gradient(
-    60deg,
-    black 25%,
-    rgba(0, 0, 0, 0.2) 50%,
-    black 75%
-  );
+  -webkit-mask-image: linear-gradient(60deg,
+      black 25%,
+      rgba(0, 0, 0, 0.2) 50%,
+      black 75%);
   -webkit-mask-size: 400%;
   -webkit-mask-position: 0%;
 }
+
 .shineEffect:hover {
   -webkit-mask-position: 100%;
   transition: mask-position 1s ease, -webkit-mask-position 1s ease;
 }
+
 /* Fade in tabs */
 @-webkit-keyframes fadeEffect {
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -102,6 +104,7 @@
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
