--- a/styles/globals.css
+++ b/styles/globals.css
@@ -109,3 +109,34 @@
     opacity: 1;
   }
 }
+
+/* Hide ScrollBar */
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
+/* Decorate ScrollBar */
+::-webkit-scrollbar {
+  width: 15px;
+  background: white;
+  border-radius: 20px;
+  border: 3px solid #F22F46 !important;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #c24bbe;
+}
+
+::-webkit-scrollbar {
+  width: 15px;
+  background: white;
+  border-radius: 20px;
+  border: 3px solid #1e1d45 !important;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #F22F46;
+  border-radius: 20px;
+
+}
